ignore cache files

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,6 @@ R/jCO2_analysis_cache
 R/jCO2_analysis_files
 Rmd/analyze_cache
 Rmd/analyze_files
+JTB_supp/JTB_supp_cache
+JTB_supp/JTB_supp_files
+JTB_ms/JTB_ms_files
