--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,13 @@
+Rcoral.Rproj
 Rmd/tmp*
 .Rproj.user
 .Rhistory
 .Rdata
-JTB_supp/*
-!JTB_supp/JTB_supp.Rmd
-!JTB_supp/JTB_supp.html
-JTB_ms/*
-!JTB_ms/JTB_ms.pdf
-!JTB_ms/JTB_ms.text
-!JTB_ms/JTB_ms.Rmd
+supp/*
+!supp/supp.Rmd
+!supp/supp.html
+ms/*
+!ms/ms.pdf
+!ms/ms.text
+!ms/ms.Rmd
 sandbox/*
